Long plant notes weren't completely visible, so they are now wrapped to content and scrollable

--- a/app/src/main/res/layout/activity_garden_save.xml
+++ b/app/src/main/res/layout/activity_garden_save.xml
@@ -17,13 +17,12 @@
             android:id="@+id/extendedFABallGardens"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:contentDescription="@string/view_all_gardens"
             android:text="@string/view_all_gardens"
             app:icon="@drawable/back_suggest_icon"
-            android:contentDescription="@string/view_all_gardens"
             app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.081"
-            android:layout_marginTop="@dimen/margin_top"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
