--- a/app/src/main/res/layout/activity_individual_plant.xml
+++ b/app/src/main/res/layout/activity_individual_plant.xml
@@ -10,7 +10,8 @@
         android:id="@+id/extendedFabBackToGarden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:layout_marginStart="@dimen/fab_margin"
         android:contentDescription="@string/view_all_gardens"
         android:text="@string/back_to_garden"
         app:icon="@drawable/back_suggest_icon"
@@ -142,10 +143,13 @@
 
                 <TextView
                     android:id="@+id/textViewPlantFertilizer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="2"
+                    android:maxLines="10"
+                    android:scrollbars="vertical"
+                    android:singleLine="false"
                     android:text="@string/unavailable" />
             </TableRow>
 
@@ -165,10 +169,12 @@
 
                 <TextView
                     android:id="@+id/textViewPlantPruning"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="2"
+                    android:maxLines="10"
+                    android:scrollbars="vertical"
                     android:text="@string/unavailable" />
             </TableRow>
 
@@ -188,10 +194,12 @@
 
                 <TextView
                     android:id="@+id/textViewPlantNotes"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="2"
+                    android:maxLines="10"
+                    android:scrollbars="vertical"
                     android:text="@string/unavailable" />
             </TableRow>
 
