--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="heading_font_size">20sp</dimen>
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_top_2">50dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
