Working on including the back option in the action bar instead of as extended FAB buttons

--- a/app/src/main/res/layout/activity_garden_save.xml
+++ b/app/src/main/res/layout/activity_garden_save.xml
@@ -8,23 +8,34 @@
     android:fillViewport="true"
     android:scrollbarFadeDuration="0">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".GardenSaveActivity">
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/extendedFABallGardens"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/mainToolBar"
+            layout="@layout/toolbar_main"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/fab_margin"
-            android:layout_marginStart="@dimen/fab_margin"
-            android:contentDescription="@string/view_all_gardens"
-            android:text="@string/view_all_gardens"
-            app:icon="@drawable/back_suggest_icon"
-            app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
+
+<!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--            android:id="@+id/extendedFABallGardens"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="@dimen/fab_margin"-->
+<!--            android:layout_marginTop="@dimen/fab_margin"-->
+<!--            android:contentDescription="@string/view_all_gardens"-->
+<!--            android:fontFamily="@font/open_sans"-->
+<!--            android:text="@string/view_all_gardens"-->
+<!--            app:icon="@drawable/back_suggest_icon"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling2"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/mainToolBar"-->
+<!--            />-->
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/extendedFabSaveGarden"
@@ -46,7 +57,7 @@
             android:layout_marginTop="@dimen/margin_top_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/extendedFABallGardens"
+            app:layout_constraintTop_toBottomOf="@id/mainToolBar"
             app:srcCompat="@drawable/little_seedling" />
 
         <TableLayout
