--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <include
+        android:id="@+id/mainToolBar"
+        layout="@layout/toolbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addGardenFAB"
         android:layout_width="wrap_content"
@@ -14,20 +24,19 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_marginBottom="@dimen/margin_20"
-        app:srcCompat="@drawable/add_icon" />
+        app:srcCompat="@drawable/add_icon"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/textViewGardensTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
         android:text="@string/browse_gardens"
-        android:textAllCaps="false"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        style="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/mainToolBar"
+         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewGardens"
