--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="secondaryDarkColor">#836fa9</color>
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
+    <color name="grayTextColor">#FF7C7979</color>
     <color name="mediumGray">#A9A9A9</color>
     <color name="lightGray">#E7E5EA</color>
 
