--- a/app/src/main/res/layout/activity_plant_save.xml
+++ b/app/src/main/res/layout/activity_plant_save.xml
@@ -13,19 +13,27 @@
         android:layout_height="wrap_content"
         tools:context=".PlantSaveActivity">
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/extendedFabAllPlants"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/mainToolBar"
+            layout="@layout/toolbar_main"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/fab_margin"
-            android:layout_marginStart="@dimen/fab_margin"
-            android:contentDescription="@string/view_all_gardens"
-            android:text="@string/view_garden"
-            app:icon="@drawable/back_suggest_icon"
-            app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_goneMarginTop="@dimen/margin_top" />
+            app:layout_constraintTop_toTopOf="parent"/>
+
+<!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--            android:id="@+id/extendedFabAllPlants"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="@dimen/fab_margin"-->
+<!--            android:layout_marginStart="@dimen/fab_margin"-->
+<!--            android:contentDescription="@string/view_all_gardens"-->
+<!--            android:text="@string/view_garden"-->
+<!--            app:icon="@drawable/back_suggest_icon"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/imageViewSeedling1"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_goneMarginTop="@dimen/margin_top" />-->
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/extendedFabSavePlant"
@@ -49,7 +57,7 @@
             android:layout_marginTop="@dimen/margin_top"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/extendedFabAllPlants"
+            app:layout_constraintTop_toBottomOf="@id/mainToolBar"
             app:srcCompat="@drawable/little_seedling" />
 
         <TableLayout
