--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_filter"
-        android:icon="@drawable/filter_icon"
-        android:title="Filter results"
-        app:showAsAction="ifRoom"
-        />
+<!--    <item-->
+<!--        android:id="@+id/action_filter"-->
+<!--        android:icon="@drawable/filter_icon"-->
+<!--        android:title="Filter results"-->
+<!--        app:showAsAction="ifRoom"-->
+<!--        />-->
 
     <item
         android:id="@+id/action_logoff"
