--- a/app/src/main/res/layout/activity_individual_plant.xml
+++ b/app/src/main/res/layout/activity_individual_plant.xml
@@ -18,13 +18,25 @@
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-    <include
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/mainToolBar"
-        layout="@layout/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:title="@string/plant_name"
+            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:elevation="@dimen/toolbar_elevation"
+            app:titleTextColor="#4F514F"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -38,24 +50,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainToolBar">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textViewPlantName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/button_margins"
-                style="@style/TextAppearance.AppCompat.Headline"
-                tools:text="Plant Name" />
-
-            <ImageView
-                android:layout_width="@dimen/adding_image_width"
-                android:layout_height="@dimen/adding_image_height"
-                app:srcCompat="@drawable/little_seedling" />
-        </LinearLayout>
+        <ImageView
+            android:layout_width="@dimen/adding_image_width"
+            android:layout_height="@dimen/adding_image_height"
+            app:srcCompat="@drawable/little_seedling" />
 
     </androidx.cardview.widget.CardView>
 
