--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_top_2">50dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="card_corner_radius">8dp</dimen>
+    <dimen name="card_content_padding">12dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
 </resources>
