--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,17 @@
     <style name="TextAppearance.App.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="fontFamily">@font/open_sans</item>
         <item name="android:fontFamily">@font/open_sans</item>
+
+    </style>
+
+    <style name="cardRecycler">
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="backgroundColor">#E7E5EA</item>
+        <item name="cornerRadius">6dp</item>
+        <item name="contentPadding">10dp</item>
+        <item name="android:layout_margin">15dp</item>
+        <item name="android:textAlignment">textEnd</item>
     </style>
 
 </resources>
