Working on styling the toolbar. Text is now white, the overflow menu popup has a rounded primarydark coloured background.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-<!--    <include-->
-<!--        android:id="@+id/mainToolBar"-->
-<!--        layout="@layout/toolbar_main"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"/>-->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/mainToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="@dimen/toolbar_elevation"
+        >
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/topToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:title="@string/browse_gardens"
-            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:elevation="@dimen/toolbar_elevation"
-            app:titleTextColor="#4F514F"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@string/browse_gardens"
+            android:theme="@style/ToolbarStyle"
+            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
+
+             />
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -41,8 +36,8 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="@dimen/margin_20"
-        android:layout_marginBottom="@dimen/margin_20"
+        android:layout_marginStart="@dimen/margin_24"
+        android:layout_marginBottom="@dimen/margin_24"
         app:srcCompat="@drawable/add_icon"
         android:focusable="true" />
 
