--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
 <!--    <item-->
 <!--        android:id="@+id/action_filter"-->
@@ -11,7 +12,8 @@
 
     <item
         android:id="@+id/action_logoff"
-        android:title="Log Off"
+        android:icon="@drawable/logoff_icon"
+        android:title="@string/log_out"
         app:showAsAction="never" />
 
 </menu>
