--- a/app/src/main/res/layout/activity_garden_save.xml
+++ b/app/src/main/res/layout/activity_garden_save.xml
@@ -19,19 +19,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:elevation="@dimen/toolbar_elevation"
+            >
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:elevation="@dimen/toolbar_elevation"
-                app:titleTextColor="#4F514F"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:title="Add Garden"
-                app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline" />
+                android:theme="@style/ToolbarStyle"
+                app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
+
+                />
         </com.google.android.material.appbar.AppBarLayout>
 
 <!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
@@ -53,7 +55,7 @@
             android:id="@+id/extendedFabSaveGarden"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_20"
+            android:layout_margin="@dimen/margin_24"
             android:contentDescription="@string/save_plant_button"
             android:gravity="center_horizontal"
             android:text="@string/save"
