--- a/app/src/main/res/layout/activity_individual_plant.xml
+++ b/app/src/main/res/layout/activity_individual_plant.xml
@@ -23,19 +23,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="@dimen/toolbar_elevation"
+        >
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:title="@string/plant_name"
-            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:elevation="@dimen/toolbar_elevation"
-            app:titleTextColor="#4F514F"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@string/plant_name"
+            android:theme="@style/ToolbarStyle"
+            app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
+
+             />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.cardview.widget.CardView
@@ -45,19 +47,34 @@
         android:layout_margin="@dimen/margin_top"
         app:cardBackgroundColor="@color/lightGray"
         app:cardCornerRadius="5dp"
-        app:contentPadding="@dimen/margin_20"
+        app:contentPadding="@dimen/margin_24"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainToolBar">
 
         <ImageView
-            android:layout_width="@dimen/adding_image_width"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/adding_image_height"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/little_seedling" />
 
     </androidx.cardview.widget.CardView>
 
+<!--    <com.google.android.material.imageview.ShapeableImageView-->
+<!--        android:id="@+id/image"-->
+<!--        style="@style/Widget.App.ShapeableImageView"-->
+<!--        android:layout_width="@dimen/adding_image_width"-->
+<!--        android:layout_height="@dimen/adding_image_height"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/mainToolBar"-->
+<!--        app:srcCompat="@drawable/little_seedling" />-->
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top"
@@ -65,7 +82,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@id/cardView">
 
         <TextView
             android:id="@+id/textViewPlantType"
