--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Main Theme of the App -->
+    <style name="Theme.App" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.App.Headline6</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.App.Subtitle1</item>
+    </style>
+
+    <!-- Titles (usually in toolbar - different font)-->
     <style name="TextAppearance.AppCompat.Headline">
         <item name="fontFamily">@font/amaranth</item>
         <item name="textAllCaps">false</item>
@@ -9,14 +22,15 @@
         <item name="android:textColor">@color/grayTextColor</item>
     </style>
 
-    <style name="Theme.App" parent="Theme.MaterialComponents.NoActionBar">
-        <item name="colorPrimary">@color/primaryColor</item>
-        <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
-        <item name="colorOnPrimary">@color/grayTextColor</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="textAppearanceHeadline6">@style/TextAppearance.App.Headline6</item>
-        <item name="textAppearanceSubtitle1">@style/TextAppearance.App.Subtitle1</item>
+    <!-- Toolbar style (common attributes from all) -->
+    <style name="ToolbarStyle" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="actionOverflowMenuStyle">@style/OverflowMenuStyle</item>
+    </style>
+
+    <!-- Style the overflow popup menu with help from https://material.io/components/menus/android#theming-menus -->
+    <style name="OverflowMenuStyle" parent="Widget.AppCompat.Light.PopupMenu.Overflow">
+        <item name="android:overlapAnchor">false</item>
+        <item name="android:popupBackground">@drawable/popup_background</item>
     </style>
 
     <style name="TextAppearance.App.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
@@ -27,6 +41,7 @@
     <style name="TextAppearance.App.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="fontFamily">@font/open_sans</item>
         <item name="android:fontFamily">@font/open_sans</item>
+        <item name="android:textColor">@color/secondaryDarkColor</item>
 
     </style>
 
@@ -38,6 +53,20 @@
         <item name="contentPadding">10dp</item>
         <item name="android:layout_margin">15dp</item>
         <item name="android:textAlignment">textEnd</item>
+    </style>
+
+<!--    from https://material.io/blog/android-stable-release-1-2 -->
+    <style
+        name="Widget.App.ShapeableImageView"
+        parent="Widget.MaterialComponents.ShapeableImageView">
+        <item name="shapeAppearance">
+            ?attr/shapeAppearanceSmallComponent
+        </item>
+        <item name="shapeAppearanceOverlay">
+            @style/ShapeAppearanceOverlay.App.CornerSize50Percent
+        </item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">?attr/colorPrimary</item>
     </style>
 
 </resources>
